--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet">
 
   <!-- Custom CSS -->
   <link href="css/stylish-portfolio.min.css" rel="stylesheet">
@@ -45,11 +45,11 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="color:white; font-family: 'Roboto', sans-serif; font-size: 15px">Menu <i class="fas fa-bars"></i></button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto" >
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about" style="color:white; font-family: 'Roboto', sans-serif; font-size: 15px"><b>Service</b></a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 15px" ><b>Process</b></a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#price"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 15px"><b>Price</b></a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio2"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 15px"><b>Portfolio</b></a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 15px"><b>Contact Us</b></a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about" style="color:white; font-family: 'Roboto', sans-serif; font-size: 13px"><b>Service</b></a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px" ><b>Process</b></a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#price"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px"><b>Price</b></a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio2"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px"><b>Portfolio</b></a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px"><b>Contact Us</b></a></li>
               </ul>
           </div>
       </div>
@@ -61,9 +61,9 @@
   <!--masthed d-flex가 bg-masthead.jpg랑 이어짐!-->
   <header class="masthead d-flex" style="font-family: 'Noto Sans KR', sans-serif;">
     <div class="container text-center my-auto"><br><br>
-      <h1 class="mb-1" style="color:white">고객은 당신의 서비스를 <br>어떻게 생각하나요 ?</h1>
+      <h1 class="mb-1" style="color:white; font-size: 70px">고객은 당신의 서비스를 <br>어떻게 생각하나요 ?</h1>
       <h3 class="mb-5" style="color:whitesmoke">
-        <h5 style="color: white; font-family: 'Noto Sans KR', sans-serif;"> <br>그린테스터로 확인하세요 !</h5>
+        <h5 style="color: white; font-family: 'Noto Sans KR', sans-serif;"> <br>그린테스터들에게 확인하세요 !</h5>
       </h3>
       <a class = "js-scroll-trigger" href="#about" style="color:green" ><b></b></a><br><br>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="font-family: 'Roboto', sans-serif;">VIEW MORE</a>
@@ -82,7 +82,7 @@
           <p class style="font-family: 'Noto Sans KR', sans-serif;"><br>그린테스터는 여러분의 아이디어를 마음껏 테스트하도록 돕습니다.
           </p>
           <p>
-            <br><b>당신의 아이디어를 원하는 타겟에게 원하는 만큼 테스트 해보세요.</b>
+            <br><b>당신의 서비스를 원하는 타겟에게 원하는 만큼 테스트 해보세요.</b>
           </p>
           
           <section class="contact-section bg-black">
@@ -95,7 +95,7 @@
                                   <h4 class="text-uppercase m-0" style="font-family: 'Roboto', sans-serif;">User Test</h4>
                                   <hr class="my-4" />
                                   <!--text-black-숫자 에서 숫자에 따라 글씨 커지고 작아지고-->
-                                  <div class="small text-black-60" >현재 서비스에 대한 사용자들의 의견, 개선점과 문제점, 버그/에러 등을 들어보세요. <br>현 서비스의 문제점을 확인해 보세요. </div>
+                                  <div class="small text-black-60" >현재 서비스에 대한 사용자들의 의견, 개선점과 문제점, 버그/에러 등을 들어보세요. <br>향후 서비스의 방향을 알아보세요 </div>
                               </div>
                           </div>
                       </div>
@@ -115,7 +115,7 @@
                                   <!-- <i class="fas fa-mobile-alt text-primary mb-2"></i>-->
                                   <h4 class="text-uppercase m-0" style="font-family: 'Roboto', sans-serif;">Marketing</h4>
                                   <hr class="my-4" />
-                                  <div class="small text-black-60">테스터들을 통해 자연스러운 초기 마케팅에 도움이 됩니다.</div>
+                                  <div class="small text-black-60">테스터들을 통해 자연스러운 마케팅과 초기 고객을 확보하는 데 도움이 됩니다.</div>
                               </div>
                           </div>
                       </div>
@@ -141,9 +141,9 @@
             <i class="icon-question"></i>
           </span>
           <h4>
-            <strong>문의</strong>
+            <strong>테스트 신청</strong>
           </h4>
-          <p class="text-faded mb-0">현재 베타테스트로<br> 자유롭게 문의주세요!</p>
+          <p class="text-faded mb-0">현재 베타테스트로<br> 무료!</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
@@ -170,7 +170,7 @@
           <h4>
             <strong>피드백</strong>
           </h4>
-          <p class="text-faded mb-0">테스트 결과에 대한 피드백을 <br> 그린테스터에게 말씀해 주세요! <i class="fas fa-heart"></i></p>
+          <p class="text-faded mb-0">테스트 환경과 시스템에 대한 피드백을 그린테스터에게 말씀해 주세요! </p>
         </div>
 
        </div>
@@ -190,7 +190,7 @@
                   <span class="caption">
                     <span class="caption-content">
                       <h2>테스터 선택</h2>
-                      <p class="mb-0">타겟에 맞는 테스터들을 직접 선택해 보세요 !</p>
+                      <p class="mb-0">타겟에 맞는 테스터들을 선택하세요.</p>
                     </span>
                   </span>
                   <img class="img-fluid" src="img/portfolio-1.jpg" alt="">
@@ -200,8 +200,8 @@
                 <a class="portfolio-item" href="#">
                   <span class="caption">
                     <span class="caption-content">
-                      <h2>질문 사항 정리</h2>
-                      <p class="mb-0">테스트를 통해 알고자 하는 점을 토의하고 그에 맞는 질문과 체크리스트를 구성하여 문서화 합니다.</p>
+                      <h2>테스터지 작성</h2>
+                      <p class="mb-0">테스트를 통해 알고자 하는 점을 토대로 질문과 체크리스트를 작성하세요.</p>
                     </span>
                   </span>
                   <img class="img-fluid" src="img/portfolio-2.jpg" alt="">
@@ -223,7 +223,7 @@
                   <span class="caption">
                     <span class="caption-content">
                       <h2>테스터 평가</h2>
-                      <p class="mb-0" style="color:rgb(63, 121, 41)">테스트 결과에 대한 테스터들 직접 평가해 주세요 ! </p>
+                      <p class="mb-0" >테스트 결과에 대한 테스터들을 평가하세요. </p>
                     </span>
                   </span>
                   <img class="img-fluid" src="img/portfolio-4.jpg" alt="">
@@ -275,7 +275,6 @@
       <br>
       <dirv>
         <a href="#" class="btn btn-primary btn-xl btn-light mr-4">제휴 문의</a>
-        <a href="#" class="btn btn-primary btn-xl btn-light mr-4">테스터 지원</a>
       </dirv>
     </div>
   </section>
@@ -286,16 +285,16 @@
   <footer class="footer text-center" style="background-color:black; opacity: 0.9;">
       <div class="container">
           <nav class="pull-left">            
-              <a href="index3.html">
-                  <span style="font-size:20px; color: rgb(229, 250, 224); font-family:'Roboto', sans-serif;">Company</span>
+              <a href="index3.html"> 
+                  <span style="font-size:20px; color: rgb(229, 250, 224);font-family: 'Nanum Gothic Coding', monospace;">회사 소개</span>
               </a>
               &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
               <a href="https://blog.naver.com/gajahcompany" target="_blank">
-                <span style="font-size:20px; color:rgb(229, 250, 224); font-family: 'Roboto', sans-serif;" >Blog</span>
+                <span style="font-size:20px; color:rgb(229, 250, 224);font-family: 'Nanum Gothic Coding', monospace;" >블로그</span>
               </a>
               &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
                <a href="index4.html">
-                  <span style="font-size:20px; color: rgb(229, 250, 224) ; font-family: 'Roboto', sans-serif;">  Tester</span>
+                  <span style="font-size:20px; color: rgb(229, 250, 224) ; font-family: 'Nanum Gothic Coding', monospace;">테스터 지원</span>
                 </a>
            </nav>
           <br><img class="img-fluid" src="img/1logo.png" width="300" alt=""><br>
@@ -303,7 +302,7 @@
               <span style="font-size:15px; text-emphasis-position: center; font-family: 'Roboto', sans-serif;">Copyright &copy; GAJAH 2019. All Rights Reserved</span>
               <br><span style="font-size:15px; text-emphasis-position: center; font-family: 'Roboto', sans-serif;">gajahcompany@gmail.com</span>
               <br><span style="font-size:12px; text-emphasis-position: center; ">사업자 등록 번호: 642-12-01053</span>
-              <span style="font-size:12px; text-emphasis-position: center">&nbsp; 통신 판매업:</span>
+              <span style="font-size:12px; text-emphasis-position: center">&nbsp; 통신 판매업: 2020-경기시흥-1049</span>
               <br><span style="font-size:12px; text-emphasis-position: center">대표자: 고수열</span>
           </div>
         </div>
