--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;700&display=swap" rel="stylesheet">
 
   <!-- Custom CSS -->
   <link href="css/stylish-portfolio.min.css" rel="stylesheet">
@@ -45,11 +45,11 @@
           <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" style="color:white; font-family: 'Roboto', sans-serif; font-size: 15px">Menu <i class="fas fa-bars"></i></button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
               <ul class="navbar-nav ml-auto" >
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about" style="color:white; font-family: 'Roboto', sans-serif; font-size: 13px"><b>Service</b></a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px" ><b>Process</b></a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#price"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px"><b>Price</b></a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio2"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px"><b>Portfolio</b></a></li>
-                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px"><b>Contact Us</b></a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about" style="color:white; font-family: 'Roboto', sans-serif; font-size: 13px"><b>Service&nbsp; &nbsp; &nbsp; </b></a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px" ><b>Process&nbsp; &nbsp; &nbsp; </b></a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#price"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px"><b>Price&nbsp; &nbsp; &nbsp; </b></a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio2"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px"><b>Portfolio&nbsp; &nbsp; &nbsp; </b></a></li>
+                  <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Contact"  style="color:white; font-family: 'Roboto', sans-serif;  font-size: 13px"><b>Contact Us&nbsp; &nbsp; &nbsp; </b></a></li>
               </ul>
           </div>
       </div>
@@ -63,7 +63,7 @@
     <div class="container text-center my-auto"><br><br>
       <h1 class="mb-1" style="color:white; font-size: 70px">고객은 당신의 서비스를 <br>어떻게 생각하나요 ?</h1>
       <h3 class="mb-5" style="color:whitesmoke">
-        <h5 style="color: white; font-family: 'Noto Sans KR', sans-serif;"> <br>그린테스터들에게 확인하세요 !</h5>
+        <h5 style="color: white; font-family: 'Noto Sans KR:wght@100', sans-serif;"> <br>그린 테스터들에게 확인하세요 !</h5>
       </h3>
       <a class = "js-scroll-trigger" href="#about" style="color:green" ><b></b></a><br><br>
       <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="font-family: 'Roboto', sans-serif;">VIEW MORE</a>
