--- a/index21.html
+++ b/index21.html
@@ -42,7 +42,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: rgb(28, 29, 28); opacity: 0.9; font-family: 'Philosopher', sans-serif;">
       <!--스타일 페이지로 넘어가면 바뀌도록 변경-->
       <div class="container">
-          <a class="navbar-brand js-scroll-trigger" href="#page-top"><img class="img-fluid" src="img/logo.png" width="280" alt="">
+          <a class="navbar-brand js-scroll-trigger" href="index.html"><img class="img-fluid" src="img/logo.png" width="280" alt="">
           </a>
       </div>
   </nav>
@@ -68,7 +68,7 @@
 
     <form method="POST">
         <input type="text" placeholder="  CODE" id ="qcode" style="color:rgb(1, 20, 0); border: chartreuse;" ><br><br>
-        <button type="submit" class="btn btn-primary btn-xl" id="submit" >Check !</button>
+        <button type="submit" class="btn btn-primary btn-xl" id="submitqode" >Check !</button>
 
     </form>
     
