--- a/index4.html
+++ b/index4.html
@@ -52,122 +52,41 @@
   <!--masthed d-flex가 bg-masthead.jpg랑 이어짐!-->
   <header class="masthead d-flex" style="font-family: 'Caladea', serif;">
     <div class="container text-center my-auto">
-        <h1 class="mb-1" style="color:white; font-family: 'Noto Sans KR', sans-serif;"><br>그린 테스터가 되고 싶은 <br>여러분을 환영합니다 !</h1>
+        <h1 class="mb-1" style="color:white; font-family: 'Noto Sans KR', sans-serif;"><br>서비스를 생각하는<br>진짜! 테스터를 찾습니다!</h1>
 
       <a class = "js-scroll-trigger" href="#about" style="color:green" ><b></b></a><br><br>
-      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="font-family: 'Philosopher', sans-serif;">테스트 진행하기</a>
+      <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about" style="font-family: 'Philosopher', sans-serif;">테스터 지원하기</a>
+      <br><br><button type="submit" class="btn btn-primary btn-xl" id="tester123" onclick="alert('준비 중입니다.')" >기존 테스터</button>
+      
     </div>
     <div class="overlay"></div>
   </header>
 
-
-
-  <!-- 테스트지 작성 페이지 -->
-  <section class="content-section bg-light" id="about" style="font-family: 'Nanum Gothic Coding', monospace;">
-    <div class="container text-center">
-        <div class="content-section-heading text-center">
-            <h3 class="text-secondary mb-0">Process 1</h3>
-            <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">테스터 선별 과정</h2>
+  <body>
+      <section class=" background-color:white" id="about" style=" font-family: 'Nanum Gothic Coding', monospace;">
+          <div class="container text-center">
+              <div class="content-section-heading text-center">
+                  <h3 class="text-secondary mb-0"><br><br><br><br><br>Process 1</h3><br>
+                  <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">테스트지 작성</h2>
+                </div>
           </div>
-      <div class="row">
-        <div class="col-lg-10 mx-auto">
-              <!-- <img class="img-fluid" src="img/logo2.png" width="400" alt=""> -->
-          <h2 style="font-family: 'Philosopher', sans-serif;">Green Tester ?</h2>
-          <p class>저희는 개발/출시 전,후 각 단계의 IT 서비스들을 <br>실제 사용자들로 구성된 테스터들에게 사용자 테스트를 진행해 드리는 서비스입니다.
-          </p>
-          <p>
-            <br><b>그린 테스터가 제공하는 3가지 !</b>
-          </p>
-          <section class="contact-section bg-black">
-              <div class="container">
-                  <div class="row">
-                      <div class="col-md-4 mb-3 mb-md-0">
-                          <div class="card py-4 h-100">
-                              <div class="card-body text-center">
-                                  <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                  <h4 class="text-uppercase m-0">사용자 테스트</h4>
-                                  <hr class="my-4" />
-                                  <!--text-black-숫자 에서 숫자에 따라 글씨 커지고 작아지고-->
-                                  <div class="small text-black-60" >현재 서비스에 대한 사용자들의 의견, 개선점과 문제점, 버그/에러 등을 찾을 수 있습니다.</div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-md-4 mb-3 mb-md-0">
-                          <div class="card py-4 h-100">
-                              <div class="card-body text-center">
-                                  <i class="fas fa-envelope text-primary mb-2"></i>
-                                  <h4 class="text-uppercase m-0">테스터</h4>
-                                  <hr class="my-4" />
-                                  <div class="small text-black-60">전문가가 아닌 서비스를 실제 사용하는 일반인들로 구성된 테스터들로써 시장 검증에 도움을 드릴 수 있습니다.</div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-md-4 mb-3 mb-md-0">
-                          <div class="card py-4 h-100">
-                              <div class="card-body text-center">
-                                  <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                  <h4 class="text-uppercase m-0">마케팅</h4>
-                                  <hr class="my-4" />
-                                  <div class="small text-black-60">초기 마케팅을 도움이 됩니다.</div>
-                              </div>
-                          </div>
-                      </div>
-                  </div> 
-              </div><br>
-             </section>
-        </div>
-      </div>
-    </div>
-  </section>
+        </section>
 
- 
- 
-  <!-- 테스터 선택 페이지 -->
-  <section class="callout" id="price" style="font-family: 'Nanum Gothic Coding', monospace;">
-    <div class="container text-center">
-        <div class="content-section-heading text-center">
-            <h3 class="text-secondary mb-0">Process 2</h3>
-            <h2 class="mx-auto mb-5 " style="font-family: 'Philosopher', sans-serif; font-size: 30px" >카카오톡 플러스 친구 "그린테스터"<br>
-          </div>
+  </body>
 
-         <h3 style="font-size:15px"><span style="color:rgb(243, 173, 61)"> 베타 테스트</span>로 모든 비용은 무료로 진행됩니다. <br>그린 테스터와 함께 당신의 서비스에 대한 고객의 의견을 들어보세요.
-        </h3>
-      </h2><br><br>
-      <a href="#" style="color:green"><b>테스트 하러 가기! </b></a><br><br>
-      <h6>* 결과 만족도에 따라 그린테스터의 발전을 위해 지원금을 자유롭게 주셔도 됩니다.</h6><br><br>
-      <img class="img-fluid" src="img/TestIcon.jpg" width="600" alt=""><br>
-
-      </div>
-  </section>
 
 
   <!-- Footer -->
- <!-- Footer -->
- <footer class="footer text-center" style="background-color:black; opacity: 0.9;">
-    <div class="container">
-        <nav class="pull-left">            
-            <a href="index3.html">
-                <span style="font-size:20px; color: rgb(229, 250, 224); font-family:'Roboto', sans-serif;">Company</span>
-            </a>
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            <a href="https://blog.naver.com/gajahcompany" target="_blank">
-              <span style="font-size:20px; color:rgb(229, 250, 224); font-family: 'Roboto', sans-serif;" >Blog</span>
-            </a>
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-             <a href="index.html">
-                <span style="font-size:20px; color: rgb(229, 250, 224) ; font-family: 'Roboto', sans-serif;">  Service</span>
-              </a>
-         </nav>
-        <br><img class="img-fluid" src="img/1logo.png" width="300" alt=""><br>
-         <div class="copyright" style="color:rgb(229, 250, 224)">
-            <span style="font-size:15px; text-emphasis-position: center; font-family: 'Roboto', sans-serif;">Copyright &copy; GAJAH 2019. All Rights Reserved</span>
-            <br><span style="font-size:15px; text-emphasis-position: center; font-family: 'Roboto', sans-serif;">gajahcompany@gmail.com</span>
-            <br><span style="font-size:12px; text-emphasis-position: center; ">사업자 등록 번호: 642-12-01053</span>
-            <br><span style="font-size:12px; text-emphasis-position: center">통신 판매업:</span>
-            <br><span style="font-size:12px; text-emphasis-position: center">대표자: 고수열</span>
+  <footer class="footer text-center" style="background-color:black; opacity: 0.9;">
+      <div class="container">
+          
+          <br><img class="img-fluid" src="img/1logo.png" width="300" alt=""><br>
+           <div class="copyright" style="color:rgb(229, 250, 224)">
+              <span style="font-size:15px; text-emphasis-position: center; font-family: 'Roboto', sans-serif;">Copyright &copy; GAJAH 2019. All Rights Reserved</span>
+
+          </div>
         </div>
-      </div>
-</footer>
+  </footer>
 
   <!-- Scroll to Top Button-->
   <a class="scroll-to-top rounded js-scroll-trigger" href="#page-top">
