--- a/index.html
+++ b/index.html
@@ -79,11 +79,10 @@
         <div class="col-lg-10 mx-auto">
               <!-- <img class="img-fluid" src="img/logo2.png" width="400" alt=""> -->
           <h2 style="font-family: 'Roboto', sans-serif;">Green Tester ?</h2>
-          <p class style="font-family: 'Noto Sans KR', sans-serif;"><br>그린테스터는 여러분의 아이디어를 마음껏 테스트하도록 돕습니다.
-          </p>
-          <p>
-            <br><b>당신의 서비스를 원하는 타겟에게 원하는 만큼 테스트 해보세요.</b>
-          </p>
+          <p><br><b>서비스에 대해 사용자 테스트를 할 수 있는 곳.</p>
+          <p><b>서비스에 맞는 원하는 테스터를 직접 선택할 수 있는 곳.</b></p>
+          <p><b>테스터들에게 원하는 질문을 직접 작성할 수 있는 곳.</b></p>
+          <p><b>전문가가 아닌 실제 사용자들로 구성되어 있는 테스터들.</b></p>
           
           <section class="contact-section bg-black">
               <div class="container">
@@ -92,7 +91,7 @@
                           <div class="card py-4 h-100">
                               <div class="card-body text-center">
                                   <!-- <i class="fas fa-map-marked-alt text-primary mb-2"></i> -->
-                                  <h4 class="text-uppercase m-0" style="font-family: 'Roboto', sans-serif;">User Test</h4>
+                                  <h4 class="text-uppercase m-0" style="font-family: 'Roboto', sans-serif;">사용자 테스트</h4>
                                   <hr class="my-4" />
                                   <!--text-black-숫자 에서 숫자에 따라 글씨 커지고 작아지고-->
                                   <div class="small text-black-60" >현재 서비스에 대한 사용자들의 의견, 개선점과 문제점, 버그/에러 등을 들어보세요. <br>향후 서비스의 방향을 알아보세요 </div>
@@ -103,7 +102,7 @@
                           <div class="card py-4 h-100">
                               <div class="card-body text-center">
                                   <!--<i class="fas fa-envelope text-primary mb-2"></i> -->
-                                  <h4 class="text-uppercase m-0" style="font-family: 'Roboto', sans-serif;">Tester</h4>
+                                  <h4 class="text-uppercase m-0" style="font-family: 'Roboto', sans-serif;">테스터</h4>
                                   <hr class="my-4" />
                                   <div class="small text-black-60">전문가가 아닌 서비스를 사용하는 일반인들로 구성된 테스터들로써 시장 검증에 도움을 드립니다.</div>
                               </div>
@@ -113,7 +112,7 @@
                           <div class="card py-4 h-100">
                               <div class="card-body text-center">
                                   <!-- <i class="fas fa-mobile-alt text-primary mb-2"></i>-->
-                                  <h4 class="text-uppercase m-0" style="font-family: 'Roboto', sans-serif;">Marketing</h4>
+                                  <h4 class="text-uppercase m-0" style="font-family: 'Roboto', sans-serif;">마케팅</h4>
                                   <hr class="my-4" />
                                   <div class="small text-black-60">테스터들을 통해 자연스러운 마케팅과 초기 고객을 확보하는 데 도움이 됩니다.</div>
                               </div>
@@ -133,7 +132,7 @@
     <div class="container">
       <div class="content-section-heading">
         <h3 class="text-secondary mb-0" style="font-family:'Roboto', sans-serif;">Process 1</h3>
-        <h2 class="mb-5" style="font-family:'Roboto', sans-serif;">Service Process</h2>
+        <h2 class="mb-5" style="font-family:'Roboto', sans-serif;">전체 서비스 진행 절차</h2>
       </div>
       <div class="row">
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
@@ -182,7 +181,7 @@
           <div class="container">
             <div class="content-section-heading text-center">
               <h3 class="text-secondary mb-0" style="font-family:'Roboto', sans-serif;">Process 2</h3>
-              <h2 class="mb-5" style="font-family:'Roboto', sans-serif;">Test Process</h2>
+              <h2 class="mb-5" style="font-family:'Roboto', sans-serif;">테스트 진행 절차</h2>
             </div>
             <div class="row no-gutters">
               <div class="col-lg-6">
@@ -255,7 +254,7 @@
   <!--Portfolio 페이지-->
   <div class="section section-gray section-clients" id="portfolio2" style="font-family: 'Noto Sans KR', sans-serif;" >
     <div class="container text-center">
-        <h4 class="header-text"><br><br><br><br><br><br>고객의 소리를 들은 서비스</h4>
+        <h4 class="header-text"><br><br><br><br><br><br>현재까지 고객의 소리를 들은 서비스</h4>
         <p>
           <marquee direction="right" style="font-family: 'Roboto', sans-serif;"><h4> Welcome to <em>your</em> customer-centered Service!</h4><br></marquee>
            
