--- a/index2.html
+++ b/index2.html
@@ -61,7 +61,7 @@
 
 <!-- 테스터지 작성 페이지 -> "손지현 전문" -->
 <section class="callout2" id="test1" style="font-family: 'Nanum Gothic Coding', monospace;">
-    <div class="container text-center">
+    <div class="container ">
         <div class="content-section-heading text-center">
             <h3 class="text-secondary mb-0"><br><br><br><br><br>Process 1</h3><br>
             <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">테스트지 작성</h2>
