--- a/index3.html
+++ b/index3.html
@@ -78,6 +78,8 @@
           <h2 style="font-size:20px; color: rgb(61, 61, 61)"><br><br><br><br><br>고객의 의견을 적극적으로 반영하여 더 나은 테스트 환경을 제공할 수 있도록</h2>
           <h2 style="font-size:20px; color: rgb(61, 61, 61)">노력하는 그린테스터가 되겠습니다.</h2>
           <h2 style="font-size:20px; color: rgb(61, 61, 61)">감사합니다.</h2>
+          <br><br>
+          <a href="index21.html" style="color:#35cc3f" target="_blank"><b>무료로 테스트 하러 가기! </b></a><br><br>
         </div>
     </section>
 
