--- a/index2.html
+++ b/index2.html
@@ -359,7 +359,7 @@
                     <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">연락 받으실 메일 또는 번호 입력</h2>
                 E-mail: <input type="email" placeholder="abc@gmail.com"><br>
                 번호: <input type="text" placeholder="010-1234-1234"><br>
-                <button type="submit"> 제출하기 </button>
+                <button type="submit"><a href="index23.html">  제출하기 </button>
                 
               
               </div>
