메뉴바 해결

--- a/index2.html
+++ b/index2.html
@@ -28,23 +28,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
 
-    <!-- Custom CSS -->
-    <link href="css/stylish-portfolio.min.css" rel="stylesheet">
-
     <!-- tester Style -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet" />
     <link href="css/fresh-bootstrap-table.css" rel="stylesheet" />
     <link href="css/demo.css" rel="stylesheet" />
-
     <!-- tester Script -->
     <script src="js/demo_tester/demo.js"></script>
     <script src="js/demo_tester/gsdk-switch.js"></script>
-
-
     <!-- tester Fonts and icons -->
     <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" type="text/css">
 
+    <!-- Custom CSS -->
+    <link href="css/stylish-portfolio.min.css" rel="stylesheet">
 
 </head>
 
@@ -571,6 +566,23 @@
     </div>
 </section>
 
+<section class="content-section bg-light" id="about" style="font-family: 'Noto Sans KR', sans-serif;">
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-lg-10 mx-auto">
+                <!-- <img class="img-fluid" src="img/logo2.png" width="400" alt=""> -->
+                <h3 class="text-secondary mb-0"><br><br>Process 3</h3><br>
+                <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">연락 받으실 메일 또는 번호 입력</h2>
+                E-mail: <input type="email" placeholder="abc@gmail.com"><br>
+                번호: <input type="text" placeholder="010-1234-1234"><br>
+                <button type="submit"><a href="index23.html"> 제출하기 </button>
+
+
+            </div>
+        </div>
+    </div>
+</section>
+
 
 
 
@@ -600,6 +612,7 @@
 
 <!-- Custom scripts for this template -->
 <script src="js/stylish-portfolio.min.js"></script>
+
 
 <!-- Tester template -->
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
