--- a/index22.html
+++ b/index22.html
@@ -214,7 +214,7 @@
       <div class="row">
         <div class="col-lg-10 mx-auto text-center">
             <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">위에 정보가 맞나요?</h2>
-            <button type="submit" ><a href="index23.html">제출하기</button><br>
+            <button type="submit" onclick="location.href='index23.html'">제출하기</button><br>
             <!--데이터들 서버로 전송하고 다음 페이지로 이동-->
           
         </div>
