--- a/index22.html
+++ b/index22.html
@@ -30,7 +30,18 @@
 
   <!-- Custom CSS -->
   <link href="css/stylish-portfolio.min.css" rel="stylesheet">
-
+  <script type="text/javascript">
+     function getParameter(sParam) {
+        var sPageURL = window.location.search.substring(1);
+        var sURLVariables = sPageURL.split('&');
+        for(var i=0;i<sURLVariables.length;i++){
+            var sParameterName = sURLVariables[i].split('=');
+            if(sParameterName[0]==sParam){
+                return sParameterName[1];
+            }
+        }
+     }
+  </script>
 </head>
 
 <!--stylish-portfolio.min.css에서 왠만한 색깔 수정!!-->
