--- a/index2.html
+++ b/index2.html
@@ -32,6 +32,7 @@
     <link href="css/fresh-bootstrap-table.css" rel="stylesheet" />
     <link href="css/demo.css" rel="stylesheet" />
     <!-- tester Script -->
+   
     <script src="js/demo_tester/demo.js"></script>
     <script src="js/demo_tester/gsdk-switch.js"></script>
     <!-- tester Fonts and icons -->
@@ -634,9 +635,13 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="https://unpkg.com/bootstrap-table/dist/bootstrap-table.min.js"></script>
 
+<script src="js/index2.js"></script>
+
+
 <script type="text/javascript">
     var $table = $('#fresh-table')
 
+    //체크된 친구들 아이디
     window.operateEvents = {
         'click .like': function (e, value, row, index) {
             console.log(value, row, index);
@@ -654,12 +659,13 @@
             $("#resultTester").html("체크된 Tester ID : "+String(rowData));
         }
     }
+    //체크박스 출력하는 애들
     function operateFormatter(value, row, index) {
         return ['<input class="table-action like" type="checkbox" name="TesterNum">'].join('')
     }
 
 
-
+    //테이블 선언?
     $(function () {
         $table.bootstrapTable({
             classes: 'table table-hover table-striped',
@@ -681,48 +687,7 @@
             }
         })
     })
-    $(document).ready(function(){
-        $('button#dataSubmit').click(function(){
 
-            var client = $('input#client').val();
-            var inputAW = $('input#inputAW').val();
-            var inputService = $('textarea#inputService').val();
-            var age = $('input:checkbox[name="Age"]:checked');
-            var ageArr = new Array();
-            age.each(function(i){
-                ageArr.push(age.eq(i).val());
-            })
-            var device = $('input:checkbox[name="device"]:checked');
-            var deviceArr = new Array();
-            device.each(function (i) {
-                deviceArr.push(device.eq(i).val());
-            })
-            var testDetails = $('textarea#testDetails').val();
-            var tester = $("div#resultTester").text();
-            var checklist = $('input:text[name="check"]');
-            var checkArr = new Array();
-            checklist.each(function(i){
-                    checkArr.push(checklist.eq(i).val());
-            })
-            var question = $('input:text[name="question"]');
-            var quesArr = new Array();
-            question.each(function(i){
-                if(question.eq(i).val()=="")
-                quesArr.push(question.eq(i).attr('placeholder').substring(4,question.eq(i).attr('placeholder').length));
-                else{
-                    quesArr.push(question.eq(i).val());
-                }
-            })
-            var clEmail = $('input#InputEmail').val();
-            var clPhoneNum = $('input#InputPhone').val();
-
-            event.preventDefault();
-            var result = confirm('입력한 그대로 제출하시겠습니까?');
-            if(result){
-                window.location.replace('index22.html?client='+client);
-            }else{}
-        })
-    })
 
 </script>
 
