--- a/index22.html
+++ b/index22.html
@@ -41,6 +41,8 @@
             }
         }
      }
+     var client = getParameter('client');
+     $("#client3").html(client);
   </script>
 </head>
 
@@ -73,6 +75,7 @@
               <h3 class="text-secondary mb-0"><br><br><br><br><br>Process 1</h3><br>
               <h2 class="mb-5" style="font-family: 'Philosopher', sans-serif;">테스트지 작성</h2>
           </div>
+          <div id="client3"></div>
           <div class="row">
             <div class="col-lg-7 mx-auto">
                 <div class="text-center"> <img class="img-fluid" src="img/index2_logo.png" width="400" display="block" margin="0px auto" alt=""></div><hr>
