--- a/index2.html
+++ b/index2.html
@@ -588,8 +588,32 @@
                         <input type="text" class="form-control" id="InputPhone" placeholder="010-1234-5678" checked>
                         </div>
                     </div>
-                    <button class="btn btn-info btn-xl js-scroll-trigger" type="submit" id="dataSubmit">제출하기</button>
+                    <button type="button" class="btn btn-info btn-xl" data-toggle="modal" data-target=".totalModal" id="dataSubmit">
+                        제출하기
+                    </button>
+
+                   <!-- <button class="btn btn-info btn-xl js-scroll-trigger" type="submit" id="dataSubmit">제출하기</button>-->
                     <!--<button class="btn btn-info btn-xl js-scroll-trigger" type="submit" onclick="location.html='index23.html'">제출하기</button>-->
+                    <!-- Modal -->
+                    <div class="modal fade totalModal" tabindex="-1" role="dialog" aria-labelledby="totalModalLabel" aria-hidden="true">
+                        <div class="modal-dialog modal-lg" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="exampleModalLabel">입력 내용 확인</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body" id="modalContent">
+                                    ...
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-primary" onclick="location.href='index23.html'">확인</button>
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </form>
                     </div>
                 </div>
