데이터 보내기

--- a/index2.html
+++ b/index2.html
@@ -35,6 +35,8 @@
    
     <script src="js/demo_tester/demo.js"></script>
     <script src="js/demo_tester/gsdk-switch.js"></script>
+
+
     <!-- tester Fonts and icons -->
     <link href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" rel="stylesheet">
     <link href="http://fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" type="text/css">
@@ -608,8 +610,8 @@
                                     ...
                                 </div>
                                 <div class="modal-footer">
-                                    <button type="button" class="btn btn-primary" onclick="location.href='index23.html'">확인</button>
-                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                                    <button type="button" class="btn btn-primary"  id="finalSubmit" onclick="location.href='index23.html'">확인</button>
+                                    <button type="button" class="btn btn-default"  data-dismiss="modal">취소</button>
                                 </div>
                             </div>
                         </div>
@@ -659,6 +661,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
 <script src="https://unpkg.com/bootstrap-table/dist/bootstrap-table.min.js"></script>
 
+
+<script src="https://www.gstatic.com/firebasejs/5.7.2/firebase.js"></script>
 <script src="js/index2.js"></script>
 
 
