--- a/index2.html
+++ b/index2.html
@@ -216,7 +216,7 @@
                     </div>
                     <!--<button class="btn btn-primary" onclick="ValidateForm(this.form)">Submit form</button> -->
                     <div class="container text-center">
-                        <button type="button" id="test" class="btn btn-primary btn-xl js-scroll-trigger" style="font-family: 'Philosopher', sans-serif;">
+                        <button type="button" id="testpage" class="btn btn-primary btn-xl js-scroll-trigger" style="font-family: 'Philosopher', sans-serif;">
                             다음
                         </button>
                     </div>
@@ -569,7 +569,11 @@
       </div><br>
       <button type="button" id="test" >선택한 테스터 보기</button>
       <br><div class id="resultTester"> </div>
-
+                <div class="container text-center">
+                    <button type="button" id="tester" class="btn btn-primary btn-xl js-scroll-trigger" onclick="location.href='#about2'" style="font-family: 'Philosopher', sans-serif;">
+                        다음
+                    </button>
+                </div>
 
 <!--새로운 테이블 -->
 
@@ -655,7 +659,7 @@
 <!-- 테스터 테이블-->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 <script src="js/table.js" type="text/javascript"></script>
-
+<script src="js/validCheck.js" type="text/javascript"></script>
 
 <!--파이어 베이스-->
 <script src="https://www.gstatic.com/firebasejs/5.7.2/firebase.js"></script>
