--- a/index3.html
+++ b/index3.html
@@ -55,7 +55,7 @@
   <section class="callout3" id="price" style="font-family: 'Nanum Gothic Coding', monospace; color: white">
       <div class="container text-center">
           <div class="content-section-heading text-center">
-              <h1 class="mx-auto mb-5 " style="font-family: 'Philosopher', sans-serif; font-size: 50px; color: white" >안녕하세요, 우리는 그린 테스터 입니다.<br><br><img src="img/green.png" width="500"></h1>
+              <h1 class="mx-auto mb-5 " style="font-family: 'Philosopher', sans-serif; font-size: 50px; color: white" >안녕하세요, 우리는 그린 테스터 입니다.<br><br><img src="img/1logo.png" width="1000"></h1>
           </div>
 
           <br>
